<resources>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">ChickenConf</string>
    <string name="inicio_frag_tv_que_es">Que es la Conferencia</string>
    <string name="inicio_frag_tv_que_es_resp">La EPISI como todos los años, organiza el evento más grande
        de la provincia del santa en tecnologias de informacion, emprender y aprender se encuentran en un mismo lugar para
        escuchar a expertos de la industria del software.</string>
    <string name="inicio_frag_tv_por_que">¿Por qué asistir?</string>
    <string name="inicio_frag_tv_por_que_resp">Porque esto se realiza una vez cada año.
Porque en la Provincia del Santa, la Universidad del Santa es la unica universidad licenciada que puede realizar
        este tipo de eventos.
Porque en este evento conocerás profesional que en el futuro te serviran de movitacion para que realizes tus proyectos
</string>
    <string name="inicio_frag_tv_info">Información de la Conferencia 2021</string>
    <string name="inicio_frag_tv_info_resp">
        \u0009 &#8226; Es un evento exclusivo para estudiantes de la EPISI.\n
        \u0009 &#8226; (Inscribite con Tiempo).\n
        \u0009 &#8226; Fecha: 31 de Agosto de 2021.\n
        \u0009 &#8226; Lugar: Auditorio EPISI.\n
        \u0009 &#8226; Dirección: Universidad Nacional del Ssanta.</string>

</resources>