<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_parrafo"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImageViewHome"
                        android:src="@drawable/logo"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimary"
                        android:layout_margin="@dimen/marginSubTitulo"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es_resp"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimary"
                        android:layout_margin="@dimen/marginSubTitulo"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape_parrafo"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImageViewHome"
                        android:src="@drawable/conferencia2"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimary"
                        android:layout_margin="@dimen/marginSubTitulo"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que_resp"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimary"
                        android:layout_margin="@dimen/marginSubTitulo"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape_parrafo"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImageViewHome"
                        android:src="@drawable/conferencia3"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimary"
                        android:layout_margin="@dimen/marginSubTitulo"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimary"
                        android:layout_margin="@dimen/marginSubTitulo"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>